# selaura

./: README.md
include/: CMakeLists.txt
src/: CMakeLists.txt  context.hpp  runtime.cpp
src-proxy/: CMakeLists.txt  main_win.cpp
src/api/mc/client/renderer/: MeshHelpers.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/client/command/: command.hpp  command_handler.hpp  command_manager.cpp  command_manager.hpp
src/client/command/impl/: Disable.cpp  Disable.hpp  Enable.cpp  Enable.hpp
src/client/io/: io.hpp
src/client/memory/: patcher.hpp  signatures.hpp
src/client/memory/sdk/game/network/: MinecraftPackets.cpp  MinecraftPackets.hpp  Packet.hpp  PacketHandlerDispatcherInstance.hpp
src/client/memory/sdk/gui/: GuiData.cpp  GuiData.hpp
src/core/bedrock/entity/components/: state_vector_component.hpp
src/platform/: platform.hpp  windows.cpp  windows.hpp
test/: CMakeLists.txt  main.cpp  selaura_imgui.hpp
